config/longhorn/01_longhorn-ingress-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ing-traefik
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: "longhorn.cube.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-int-svc
                port:
                  number: 8000
